# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.286 2005/07/05 18:58:20 wolf31o2 Exp $

  05 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Added profile sanity check for bug #97867.

  05 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  Added profile sanity check for bug #97867.

  05 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Removing acpi=off from default kernel arguments and adding ia64
  livecd-stage2 support functions and cdtar.

  30 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/pre-kmerge.sh:
  Changed sed line for 1024x768-only splash for x86 and amd64 only, as we
  control the framebuffer size there. Also, added CONSOLE=/dev/tty1 quiet to
  splash command line.

  28 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/create-iso.sh:
  Fixed up zisofs support. Waiting for response from sparc before touching
  their ISO creation.

  28 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/livecd_stage2_target.py, targets/support/bootloader-setup.sh,
  targets/support/functions.sh:
  Added livecd/bootargs and added the option to the bootloader-setup.sh script
  to allow it to work on all arches that dynamically build their bootloader
  configuration.

  27 Jun 2005; Eric Edgar <rocket@gentoo.org>
  targets/stage4/stage4-controller.sh:
  Fix stage4 so it doesnt run the bootloader stuff

  24 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Removed dokeymap from non-Gentoo releases.

  23 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added call to update-pciids to download the latest pci.ids file.

  23 Jun 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/livecd_stage1_target.py,